<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_5sdp"
                    app:srcCompat="@drawable/vc_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/strRegister"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_v_large" />

            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_user"
                    android:drawableLeft="@drawable/vc_user"
                    android:drawablePadding="@dimen/_8sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/strFirstName"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLastName"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_user"
                    android:drawableLeft="@drawable/vc_user"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/strLastName"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMobileNumber"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_phone"
                    android:drawableLeft="@drawable/vc_phone"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/strMobileNumber"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_password"
                    android:drawableLeft="@drawable/vc_password"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/strPassword"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_email"
                    android:drawableLeft="@drawable/vc_email"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/strEmailAddress"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strRegister"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLoader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:gravity="center"
            android:visibility="gone">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/aviLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/colorPrimaryDark"
                app:indicatorName="BallSpinFadeLoaderIndicator" />

        </LinearLayout>
    </RelativeLayout>


</layout>