<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/strLogin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_v_large" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_phone"
                    android:drawableLeft="@drawable/vc_phone"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/strMobileNumber"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vc_password"
                    android:drawableLeft="@drawable/vc_password"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/strPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/font_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/strLogin"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_large" />

            <TextView
                android:id="@+id/tvSignUpHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/strNotHaveAnAccount"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_large" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLoader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:gravity="center"
            android:visibility="gone">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/aviLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorColor="@color/colorPrimaryDark"
                app:indicatorName="BallSpinFadeLoaderIndicator" />

        </LinearLayout>
    </RelativeLayout>


</layout>